BARC UAT/src/objects/Survey__c.object
<CustomObject>
    <fields>
        <fullName>Callcenter_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Callcenter Technician</label>
        <referenceTo>Operator_Technician__c</referenceTo>
        <relationshipLabel>Survey (Callcenter Technician)</relationshipLabel>
        <relationshipName>Survey_Callcenter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Survey</relationshipLabel>
        <relationshipName>Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Case__r.Cluster__r.Sampling__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_House_Ownership_status__c</fullName>
        <label>Current House Ownership status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ownership</fullName>
                </value>
                <value>
                    <fullName>Rented</fullName>
                </value>
                <value>
                    <fullName>Provided by Employer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decision_Maker_for_buying_groceries__c</fullName>
        <label>Decision Maker for buying groceries</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Different_cable_or_DTH_connections__c</fullName>
        <inlineHelpText>How many different cable or DTH connections do you have at home?</inlineHelpText>
        <label>Different cable or DTH connections</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>District_Name__c</fullName>
        <label>District Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <formula>Case__r.Cluster__r.District__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Durables_in_working_condition__c</fullName>
        <inlineHelpText>Please select the durables which are in working condition, at your residence (Select Multiple option)</inlineHelpText>
        <label>Durables in working condition</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Air Conditioner</fullName>
                </value>
                <value>
                    <fullName>Car / Jeep / Van</fullName>
                </value>
                <value>
                    <fullName>Celling Fan</fullName>
                </value>
                <value>
                    <fullName>Color Tv</fullName>
                </value>
                <value>
                    <fullName>LPG Stove</fullName>
                </value>
                <value>
                    <fullName>Personal Computer/ Laptop</fullName>
                </value>
                <value>
                    <fullName>Refrigerator</fullName>
                </value>
                <value>
                    <fullName>Two-Wheeler</fullName>
                </value>
                <value>
                    <fullName>Washing Machine</fullName>
                </value>
                <value>
                    <fullName>Does the Chief wage earner (contributes the most to household expenditure) of the Household own any agricultural land?</fullName>
                </value>
                <value>
                    <fullName>Car/Jeep/Van</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Head_end__c</fullName>
        <label>Head end</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Highest_household_contributer__c</fullName>
        <label>Highest household contributer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HouseHold__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HouseHold</label>
        <referenceTo>HouseHold__c</referenceTo>
        <relationshipLabel>Survey</relationshipLabel>
        <relationshipName>Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>House_Member_Works_in_of_the_Companies__c</fullName>
        <inlineHelpText>Looking at the following list Please tell me whether you or any other household member works for any of the following type of companies: (If administered by Technician else don’t ask)</inlineHelpText>
        <label>House Member Works in of the Companies</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing Research Agency</fullName>
                </value>
                <value>
                    <fullName>Advertising Agency</fullName>
                </value>
                <value>
                    <fullName>Media Company (Print, Television, Radio, Satellite Channels etc.)</fullName>
                </value>
                <value>
                    <fullName>Public Relations Company</fullName>
                </value>
                <value>
                    <fullName>Digital agencies</fullName>
                </value>
                <value>
                    <fullName>Retail shop owner selling DTH, recharging DTH</fullName>
                </value>
                <value>
                    <fullName>Telecom &amp; Internet</fullName>
                </value>
                <value>
                    <fullName>None Of The Above</fullName>
                </value>
                <value>
                    <fullName>Media Company</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Household_StatusN__c</fullName>
        <label>Household Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agreed Scheduled</fullName>
                </value>
                <value>
                    <fullName>Next Call</fullName>
                </value>
                <value>
                    <fullName>Not Connected</fullName>
                </value>
                <value>
                    <fullName>Installed agree</fullName>
                </value>
                <value>
                    <fullName>Next Visit</fullName>
                </value>
                <value>
                    <fullName>Door Locked</fullName>
                </value>
                <value>
                    <fullName>Refuse</fullName>
                </value>
                <value>
                    <fullName>Not Eligible</fullName>
                </value>
                <value>
                    <fullName>Technical Issue</fullName>
                </value>
                <value>
                    <fullName>Dongle Not Working</fullName>
                </value>
                <value>
                    <fullName>STB Not Working</fullName>
                </value>
                <value>
                    <fullName>Home Not Found</fullName>
                </value>
                <value>
                    <fullName>FORWARDED</fullName>
                </value>
                <value>
                    <fullName>TERMINATED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Household_Status__c</fullName>
        <label>Household Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agreed Scheduled</fullName>
                </value>
                <value>
                    <fullName>Next Call</fullName>
                </value>
                <value>
                    <fullName>Not Connected</fullName>
                </value>
                <value>
                    <fullName>Installed agree</fullName>
                </value>
                <value>
                    <fullName>Next Visit</fullName>
                </value>
                <value>
                    <fullName>Door Locked</fullName>
                </value>
                <value>
                    <fullName>Refuse</fullName>
                </value>
                <value>
                    <fullName>Not Eligible</fullName>
                </value>
                <value>
                    <fullName>Technical Issue</fullName>
                </value>
                <value>
                    <fullName>Dongle Not Working</fullName>
                </value>
                <value>
                    <fullName>STB Not Working</fullName>
                </value>
                <value>
                    <fullName>Home Not Found</fullName>
                </value>
                <value>
                    <fullName>TERMINATED</fullName>
                </value>
                <value>
                    <fullName>FORWARDED</fullName>
                </value>
                <value>
                    <fullName>Agreed/Scheduled</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Installation_Date__c</fullName>
        <label>Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_household_part_of_TMP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is your household currently part of a Television Measurement Panel?</inlineHelpText>
        <label>Is household part of TMP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language_Spoken_amongst_Family__c</fullName>
        <inlineHelpText>Language Spoken amongst Family</inlineHelpText>
        <label>Language Spoken amongst Family</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lang_List</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Most_Common_lang_amongst_family_member__c</fullName>
        <label>Most Common lang amongst family member</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lang_List</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pincode__c</fullName>
        <formula>Case__r.Cluster__r.Sampling__r.Pincode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pincode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruitment_Date__c</fullName>
        <label>Recruitment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>STB_ID_GOS_STB_ID__c</fullName>
        <label>STB ID/ GOS STB ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Smart_Card_ID__c</fullName>
        <label>Smart Card ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Case__r.Cluster__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_District_Name__c</fullName>
        <label>Sub District Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Date__c</fullName>
        <label>Survey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>T2QB__c</fullName>
        <formula>Total_members_living_currently__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T2QB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T4MA__c</fullName>
        <formula>Total_members_living_currently__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T4MA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T6Q10__c</fullName>
        <formula>Text(Total_Room_in_House_Except_Kitc_WC__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T6Q10</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T6Q8__c</fullName>
        <formula>CASE( Current_House_Ownership_status__c,
					&quot;Ownership&quot;,&quot;1&quot;,
					&quot;Rented&quot;, &quot;2&quot;,
					&quot;Provided by Employer&quot;, &quot;3&quot;,
					&quot;Other&quot;, &quot;4&quot;,
					&quot;Null&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T6Q8</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T8Q12_1__c</fullName>
        <formula>CASE(Your_Native_Language__c,
				&quot;Assamese&quot;,&quot;1&quot;,
					&quot;Awadhi&quot;,&quot;2&quot;,
					&quot;Bengali&quot;,&quot;3&quot;,
					&quot;Bhojpuri&quot;,&quot;4&quot;,
					&quot;English&quot;,&quot;5&quot;,
					&quot;Garhwali&quot;,&quot;6&quot;,
					&quot;Gujarati&quot;,&quot;7&quot;,
					&quot;Hindi&quot;,&quot;8&quot;,
					&quot;Kannada&quot;,&quot;9&quot;,
					&quot;Konkani&quot;,&quot;10&quot;,
					&quot;Kutchi&quot;,&quot;11&quot;,
					&quot;Malayalam&quot;,&quot;12&quot;,
					&quot;Marwari&quot;,&quot;13&quot;,
					&quot;Marathi&quot;,&quot;14&quot;,
					&quot;Maithili&quot;,&quot;15&quot;,
					&quot;Oriya&quot;,&quot;16&quot;,
					&quot;Punjabi&quot;,&quot;17&quot;,
					&quot;Santali&quot;,&quot;18&quot;,
					&quot;Sindhi&quot;,&quot;19&quot;,
					&quot;Tamil&quot;,&quot;20&quot;,
					&quot;Telugu&quot;,&quot;21&quot;,
					&quot;Tulu&quot;,&quot;22&quot;,
					&quot;Urdu&quot;,&quot;23&quot;,
					&quot;Bodo&quot;,&quot;26&quot;,
					&quot;Dogri&quot;,&quot;27&quot;,
					&quot;Kashmiri&quot;,&quot;28&quot;,
					&quot;Khasi&quot;,&quot;29&quot;,
					&quot;Manipuri&quot;,&quot;30&quot;,
					&quot;Nepali&quot;,&quot;31&quot;,
					&quot;Sanskrit&quot;,&quot;32&quot;,
					&quot;Other Indian Languages&quot;,&quot;24&quot;,
					&quot;Other foreign languages&quot;,&quot;25&quot;,
					&quot;Null&quot;
				)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T8Q12_1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician Number</label>
        <referenceTo>Operator_Technician__c</referenceTo>
        <relationshipLabel>Survey</relationshipLabel>
        <relationshipName>Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Television_Measurement_Panel_for_3_mnt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Were you part of a Television Measurement Panel in the previous three months?</inlineHelpText>
        <label>Television Measurement Panel for 3 mnt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Room_in_House_Except_Kitc_WC__c</fullName>
        <label>Total Room in House(Except Kitc &amp; WC)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>10+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_members_living_currently__c</fullName>
        <label>Total members living currently</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Town_Village__c</fullName>
        <formula>Case__r.Cluster__r.Sampling__r.Town_Village__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Town Village</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VC_No__c</fullName>
        <label>VC No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_is_Respondant__c</fullName>
        <label>Who is Respondant</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Working_TV_sets__c</fullName>
        <inlineHelpText>How many (number of) working TV sets do you have at home?</inlineHelpText>
        <label>Working TV sets</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Would_you_like_to_be_part_of_TMP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Would you like to be part of a Television Measurement Panel, wherein a dongle would be installed on your Set Top Box to improve our services and acquire critical feedback on any problems faced by our customers?</inlineHelpText>
        <label>Would you like to be part of TMP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Your_Native_Language__c</fullName>
        <inlineHelpText>What is your mother tongue? By mother tongue I mean the language your mother first spoke to you in when you were born. (Select the language one)</inlineHelpText>
        <label>Your Native Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lang_List</valueSetName>
        </valueSet>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>